[test] enable build with JDK17+